# dj_dolly

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  Untitled.ipynb  delete_migrations.sh  dump.sh  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yaml
dolly/: admin.py  apps.py  core.py  exceptions.py  utils.py
dolly/management/commands/: clone_tree.py  import_tree.py
dolly/templates/dolly/: log.html
dolly_testing/: admin.py  apps.py  models.py  testing.py
dolly_testing/fixtures/: dolly_testing.yaml
dolly_testing/tests/: test_base_remapper.py  test_cloner.py  test_doc.py  test_exporter.py  test_importer.py  test_inheritance_and_clones.py  test_utils.py
project/: asgi.py  settings.py  urls.py  wsgi.py
