[metadata]
name = dj_dolly
version = 0.1
description = Django Dolly - Cloning, exports and imports
long_description = file: README.md
url = https://github.com/VoteIT/dj_dolly
author = VoteIT dev team
author_email = info@voteit.se
license = GPLv3  # Example license

#FIXME: Classifiers etc
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    django >= 3.2

test_suite = tests
include_package_data = true
packages = find:

[options.extras_require]
testing =
    coverage>=5.0
    pyyaml
    django-deep-collector
