[metadata]
name = dj_dolly
version = 1.0.0
description = Django Dolly - Cloning, exports and imports
long_description = file: README.md
url = https://github.com/VoteIT/dj_dolly
author = VoteIT dev team
author_email = info@voteit.se
license = GPLv3

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 4
    Framework :: Django :: 5
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP


[options]
install_requires =
    django >= 3.2

test_suite = tests
include_package_data = true
packages = find:

[options.extras_require]
testing =
    coverage
    pyyaml
    django-deep-collector
